# label_noise

./: .dockerignore  .gitignore  Dockerfile  README.md  label_noise_notebook.ipynb  pyproject.toml
.dev/: run_lin.sh
label_noise/app/: __init__.py  check_noise.py  train.py
label_noise/dataset/: __init__.py  data.py  transforms.py
label_noise/model/: __init__.py  _model.py
tests/: app_test.py
